[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/menu/sumon (1).png" type="Texture" id=1]
[ext_resource path="res://scenes/AllScores.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/ScoresPage.gd" type="Script" id=3]
[ext_resource path="res://scenes/MyScores.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/menu/back button.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/online_score_2.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/my_score_2.png" type="Texture" id=7]

[node name="ScoresPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1040.0
margin_bottom = -1880.0
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.141176, 0.141176, 0.627451 )

[node name="MyScores" parent="." instance=ExtResource( 4 )]
margin_left = 11.0
margin_top = 129.0
margin_right = 11.0
margin_bottom = 3.0

[node name="AllScores" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 11.0
margin_top = 62.0
margin_right = 11.0
margin_bottom = -22.0

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 25.0
margin_right = 82.0
margin_bottom = 95.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 5 )

[node name="MyScoresBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_left = 274.0
margin_top = 50.0
margin_right = 474.0
margin_bottom = 134.0
rect_scale = Vector2( 1.8, 1.8 )
rect_pivot_offset = Vector2( 100, 42 )
texture_normal = ExtResource( 7 )

[node name="AllScoresBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_left = 664.0
margin_top = 50.0
margin_right = 864.0
margin_bottom = 130.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 100, 40 )
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MyScoresBtn" to="." method="_on_MyScoresBtn_pressed"]
[connection signal="pressed" from="AllScoresBtn" to="." method="_on_AllScoresBtn_pressed"]
